--- a/_columns/The_Big_Picture/2024-02-09.md
+++ b/_columns/The_Big_Picture/2024-02-09.md
@@ -60,7 +60,7 @@ Investors will be hoping that the momentum continues when CPI data for January c
 ---
 
 
-**[Market Rally Hot, But Watch For This; Five Stocks In Buy Zones](https://www.investors.com/news/ai-stocks-braze-sprout-social-break-out-three-buy-points-cathie-wood-favorite/)**
+**[Futures: Market Hot, But Watch For This; 5 Stocks In Buy Zones](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-market-hot-watch-out-for-this-stocks-in-buy-zones/)**
 
 
 
