--- a/_columns/Stock_Of_the_Day/2024-02-16.md
+++ b/_columns/Stock_Of_the_Day/2024-02-16.md
@@ -33,7 +33,7 @@ Revenue is just about evenly spread across Weatherford's three reporting segment
 In overview, oil has become more challenging to produce in all of those locations. That makes services like Weatherford and larger peer oil stocks including **SLB** ([SLB](https://research.investors.com/quote.aspx?symbol=SLB)), **Halliburton** ([HAL](https://research.investors.com/quote.aspx?symbol=HAL)), **Baker Hughes** ([BKR](https://research.investors.com/quote.aspx?symbol=BKR)) — and a long list of others — critical partners in the oil and natural gas production process.
 
 
-U.S. oil prices have, for now, leveled out in the $72 to $76 a barrel range, though they were moving out to near $79 as of Friday. That evening-out marks at least a brief pause after two decades of extreme and sometimes extended price swings. In the U.S., leading oil producers are taking a more measured approach to production, and paying closer attention to debt and costs, a sharp divergence from the industry's past.
+U.S. oil prices have, for now, leveled out in the $70 to $80 a barrel range. That evening-out marks at least a brief pause after two decades of extreme and sometimes extended price swings. In the U.S., leading oil producers are taking a more measured approach to production, and paying closer attention to debt and costs, a sharp divergence from the industry's past.
 
 
 That hints that prices could find some sense of balance. But the test will be as demand, particularly from China, continues to recover from the pandemic-era drain. That is expected to play out across this year and into 2025. Most forecasts see oil markets as growing very tight, suggesting higher prices, as that process takes place. But the International Energy Agency's most recent report, on Thursday, saw demand growth as slowing and oil supply growth sufficient to keep pace.
