--- a/_columns/The_Big_Picture/2024-02-23.md
+++ b/_columns/The_Big_Picture/2024-02-23.md
@@ -49,6 +49,19 @@ But earnings kick off early when Berkshire Hathaway reports on Saturday. The fou
 His letters are widely read by those seeking his thoughts on the economy and investing in general. It also will be Buffett's first yearly missive since the death of his long-term lieutenant Charlie Munger in November.
 
 
+
+
+---
+
+
+**[Nvidia Runs, AMD Setting Up, But Market Needs This](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-nvidia-eyes-new-milestone-amd-setting-up/)**
+
+
+
+
+---
+
+
 These Stock Market Sectors Impress
 ----------------------------------
 
@@ -67,9 +80,6 @@ In contrast, computer hardware firms, fiber-optics plays and cable and satellite
 
 
 Travel stocks had the toughest session following a negative reaction to the latest quarterly report from **Booking** ([BKNG](https://research.investors.com/quote.aspx?symbol=BKNG)). The stock was given the chop from the [Leaderboard Watchlist](https://leaderboard.investors.com/#/leaders/leadersnearabuypoint) amid a decline of more than 10%.
-
-
- 
 
 
 [View General Market Indicator charts page here.](https://www.investors.com/wp-content/uploads/2024/02/DailyGMI_022324.pdf)
