--- a/_columns/Stock_Of_the_Day/2024-02-21.md
+++ b/_columns/Stock_Of_the_Day/2024-02-21.md
@@ -12,7 +12,7 @@ author: HARRISON MILLER
 
 
 
-Kitchen and home appliance maker SharkNinja is the IBD Stock Of The Day for Wednesday. SN stock is trading above a buy point after a major run-up following its initial public offering last summer.
+Kitchen and home appliance maker SharkNinja([SN](https://research.investors.com/quote.aspx?symbol=SN)) is the IBD Stock Of The Day for Wednesday. SN stock is trading above a buy point after a major run-up following its initial public offering last summer.
 
 
 
