--- a/_columns/Stock_Of_the_Day/2024-02-02.md
+++ b/_columns/Stock_Of_the_Day/2024-02-02.md
@@ -12,7 +12,7 @@ author: JED GRAHAM
 
 
 
-Axon Enterprise is Friday's [IBD Stock Of The Day](https://www.investors.com/research/ibd-stock-of-the-day/) as the maker of the Taser, body cameras and cloud-based evidence systems for law enforcement targets a new customer segment: retail workers. Axon stock moved past an early entry point on a bounce off key support.
+Axon Enterprise([AXON](https://research.investors.com/quote.aspx?symbol=AXON)) is Friday's [IBD Stock Of The Day](https://www.investors.com/research/ibd-stock-of-the-day/) as the maker of the Taser, body cameras and cloud-based evidence systems for law enforcement targets a new customer segment: retail workers. Axon stock moved past an early entry point on a bounce off key support.
 
 
 
