--- a/_columns/The_Big_Picture/2024-02-29.md
+++ b/_columns/The_Big_Picture/2024-02-29.md
@@ -133,7 +133,7 @@ Duolingo soared more than 22% Thursday, bullishly retaking its 50-day line and m
 [Oil field services provider](https://www.investors.com/research/ibd-stock-of-the-day/technipfmc-stock-could-see-160-eps-growth-in-2024/) TechnipFMC is building a cup base that has a 22.78 buy point. Shares closed Thursday about 5% away from their buy point.
 
 
-View the General Market Indicators chart page here.
+[View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/02/DailyGMI_022924.pdf).
 
 
 *Be sure to follow Scott Lehtonen on X/Twitter at [@IBD\_SLehtonen](https://twitter.com/IBD_SLehtonen) for more on the Dow Jones Industrial Average and stock market news.*
