--- a/_columns/The_Big_Picture/2024-03-11.md
+++ b/_columns/The_Big_Picture/2024-03-11.md
@@ -72,7 +72,7 @@ The S&P 500 has five such days of losses in higher volume and the Nasdaq four da
 With risks increasing, IBD maintains a suggested exposure level of 60% to 80% in stocks for your portfolio. Lately, there hasn't been much new leadership to take up the slack for the softening leading stocks.
 
 
-At trading desks Tuesday, it's all hands on deck at 8:30 a.m. ET for the February consumer price index. [Economists predict](https://research.investors.com/economic-calendar/&nbsp;) price gains will stay nearly the same as they were in January, when CPI rose 0.3% month to month and 3.1% on a 12-month basis.
+At trading desks Tuesday, it's all hands on deck at 8:30 a.m. ET for the February consumer price index. [Economists expect](https://research.investors.com/economic-calendar/) price gains will stay nearly the same as they were in January, when CPI rose 0.3% month to month and 3.1% on a 12-month basis.
 
 
 [View General Market Indicator charts page here.](https://www.investors.com/wp-content/uploads/2024/03/DailyGMI_031124.pdf)
