--- a/_columns/The_Big_Picture/2024-03-12.md
+++ b/_columns/The_Big_Picture/2024-03-12.md
@@ -92,5 +92,8 @@ Dutch Bros cleared a 32.31 entry Tuesday in heavy volume. But a [Relative Streng
 [How To Research Growth Stocks: Why This IBD Tool Simplifies The Search For Top Stocks](https://www.investors.com/how-to-invest/investors-corner/stocks-to-buy-and-watch-ibd-composite-rating-top-growth-stocks/)
 
 
+[Futures: Five Stocks Flash Buy Signals](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-stocks-flash-buy-signals-tesla-new-sell-rating/)
+
+
 
 
