--- a/_columns/Stock_Of_the_Day/2024-03-21.md
+++ b/_columns/Stock_Of_the_Day/2024-03-21.md
@@ -93,7 +93,7 @@ Be sure to read IBD's [The Big Picture](https://www.investors.com/category/marke
 [These Are The 5 Best Stocks To Buy And Watch Now](https://www.investors.com/research/best-stocks-to-buy-now/)
 
 
-[Apple Sours Market Gains But 11 Stocks Flash Buy Signals; FedEx Soars Late](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-gains-fade-on-apple-stock-fedex-jumps/)
+[Futures Rise, FedEx Soars; Tesla Skids On China Woes](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-rise-fedex-soars-tesla-skids-on-china-production/)
 
 
 
