--- a/_columns/The_Big_Picture/2024-03-21.md
+++ b/_columns/The_Big_Picture/2024-03-21.md
@@ -144,7 +144,7 @@ Finally, after Royal Caribbean topped a 133.77 buy point Wednesday, shares tacke
 [Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition](https://www.investors.com/product/marketsmith/?artProdLink=MarketSmith)
 
 
-[Apple Sours Market, 11 Stocks Flash Buy Signals; 3 Earnings Movers Late](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-gains-fade-on-apple-stock-fedex-jumps/)
+[Futures Rise, FedEx Soars; Tesla Skids On China Woes](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-rise-fedex-soars-tesla-skids-on-china-production/)
 
 
 
