--- a/_columns/The_Big_Picture/2024-03-04.md
+++ b/_columns/The_Big_Picture/2024-03-04.md
@@ -85,7 +85,7 @@ The stock market has a few sensitive events on its calendar this week.
 Wednesday and Thursday, Federal Reserve Chairman Jerome Powell gives testimony to House and Senate committees. These are the types of public pronouncements that can give hints on Fed thinking and, perhaps, move financial markets.
 
 
-Earnings reports from a number of important retailers are also due this week. **Target** ([TGT](https://research.investors.com/quote.aspx?symbol=TGT)), **Ross Stores** ([ROST](https://research.investors.com/quote.aspx?symbol=ROST)), **Nordstrom** ([JWN](https://research.investors.com/quote.aspx?symbol=JWN)), **Abercrombie & Fitch** ([ANF](https://research.investors.com/quote.aspx?symbol=ANF)), **Gap** ([GPS](https://research.investors.com/quote.aspx?symbol=GPS)), **Costco** ([COST](https://research.investors.com/quote.aspx?symbol=COST)), **Kroger** ([KG](https://research.investors.com/quote.aspx?symbol=KG)) and others will give the stock market a broad view into consumer spending.
+Earnings reports from a number of important retailers are also due this week. **Target** ([TGT](https://research.investors.com/quote.aspx?symbol=TGT)), **Ross Stores** ([ROST](https://research.investors.com/quote.aspx?symbol=ROST)), **Nordstrom** ([JWN](https://research.investors.com/quote.aspx?symbol=JWN)), **Abercrombie & Fitch** ([ANF](https://research.investors.com/quote.aspx?symbol=ANF)), **Gap** ([GPS](https://research.investors.com/quote.aspx?symbol=GPS)), **Costco** ([COST](https://research.investors.com/quote.aspx?symbol=COST)), **Kroger** ([KR](https://research.investors.com/quote.aspx?symbol=KR)) and others will give the stock market a broad view into consumer spending.
 
 
 On Friday, the February employment report is sure to get pinned on the Fed's bulletin board.
