--- a/_columns/The_Big_Picture/2024-03-13.md
+++ b/_columns/The_Big_Picture/2024-03-13.md
@@ -53,7 +53,7 @@ In the [MarketSurge](https://get.investors.com/marketsurge/announcement//?srs=&u
 Some breakouts have been working but others are seeing gains fade. Thinly traded **Paymentus** ([PAY](https://research.investors.com/quote.aspx?symbol=PAY)) is up more than 30% from a March 5 breakout, but **AeroVironment** ([AVAV](https://research.investors.com/quote.aspx?symbol=AVAV)) and **NetApp** ([NTAP](https://research.investors.com/quote.aspx?symbol=NTAP)) have given up much of their price increases from buy points.
 
 
-Meanwhile, Wednesday's breakouts for **Owens Corning** ([OW](https://research.investors.com/quote.aspx?symbol=OW)) and **FleetCor Technologies** ([FLT](https://research.investors.com/quote.aspx?symbol=FLT)) came in unimpressive volume. But several breakouts among copper and metal mining plays Wednesday came in solid volume.
+Meanwhile, Wednesday's breakouts for **Owens Corning** ([OC](https://research.investors.com/quote.aspx?symbol=OC)) and **FleetCor Technologies** ([FLT](https://research.investors.com/quote.aspx?symbol=FLT)) came in unimpressive volume. But several breakouts among copper and metal mining plays Wednesday came in solid volume.
 
 
 Mining stocks had a fabulous day. **Southern Copper** ([SCCO](https://research.investors.com/quote.aspx?symbol=SCCO)) broke out in strong volume as did **Freeport-McMoRan** ([FCX](https://research.investors.com/quote.aspx?symbol=FCX)). **Teck Resources** ([TECK](https://research.investors.com/quote.aspx?symbol=TECK)) gapped up more than 8%. The stock is forming a long base, although the Dec. 28 high at 43 may act as an alternative entry.
