--- a/_columns/The_Big_Picture/2024-03-22.md
+++ b/_columns/The_Big_Picture/2024-03-22.md
@@ -40,7 +40,7 @@ Stock Market Holiday And Inflation Data Next
 Stocks took a breather at the end of a week that saw a furious rally following the Federal Reserve decision to hold steady on interest rates.
 
 
-The coming week looks more sedate, especially given the fact the stock market will be closed for Good Friday. This means there will be a delayed reaction to the latest Personal Consumption Expenditures reading, which drops during the market holiday. Core PCE, the Fed's favorite gauge of inflation, is expected to rise 2.8% year-over-year.
+![](https://www.investors.com/wp-content/uploads/2024/03/MP032224_new.jpg)The coming week looks more sedate, especially given the fact the stock market will be closed for Good Friday. This means there will be a delayed reaction to the latest Personal Consumption Expenditures reading, which drops during the market holiday. Core PCE, the Fed's favorite gauge of inflation, is expected to rise 2.8% year-over-year.
 
 
 Also on the agenda is a slew of Fedspeak in coming days. Federal Reserve Gov. Lisa Cook is speaking on Monday, while Gov. Christopher Waller appears Wednesday. Fed Chair Jerome Powell will take part in a moderated discussion at the Federal Reserve Bank of San Francisco Macroeconomics and Monetary Policy Conference on Friday.
