--- a/_columns/The_Big_Picture/2024-03-28.md
+++ b/_columns/The_Big_Picture/2024-03-28.md
@@ -18,7 +18,7 @@ The stock market ended quietly mixed Thursday, but the S&P 500 posted its best f
 Markets will be closed for the Good Friday holiday, but the Commerce Department plans to release its Personal Consumption Expenditures price index in the morning. [Fed Chair Powell said](https://www.investors.com/research/investing-action-plan/stock-market-rally-dow-jones-cintas-jefferies-financial/) the core PCE price index likely rose "well below 30 basis points" during February, putting the 12-month increase at 2.8%. Markets, once they're open Monday, would likely react if the outcome is different.
 
 
-Meanwhile, Powell [will speak Friday](https://www.frbsf.org/news-and-media/events/2024/03/jerome-powell-remarks-with-kai-ryssdal-2024/?utm_source=web&utm_medium=event&utm_campaign=macro_conference_2024)at the Macroeconomics and Monetary Policy Conference in a conversation moderated by Kai Ryssdal of Marketplace.
+Meanwhile, Powell [is due to speak Friday](https://www.frbsf.org/news-and-media/events/2024/03/jerome-powell-remarks-with-kai-ryssdal-2024/?utm_source=web&utm_medium=event&utm_campaign=macro_conference_2024) at the Macroeconomics and Monetary Policy Conference in a conversation moderated by Kai Ryssdal of Marketplace.
 
 
 Wrapping up the first quarter of 2024 Thursday, the S&P 500 is up 10.2%, its best first-quarter gain since 2019. The Dow Jones Industrial Average is up 5.7% for the period, its strongest Q1 performance since 2021. And the Nasdaq is up 9.2% since Jan. 1.
