--- a/_columns/The_Big_Picture/2024-04-12.md
+++ b/_columns/The_Big_Picture/2024-04-12.md
@@ -53,6 +53,19 @@ Investors will be hoping this is not a harbinger for things to come. Streaming g
 There also will be a bevy of economic data reports in the coming week. U.S. retail sales figures are due before the open Monday while the Federal Reserve's Beige Book, which details regional economic conditions across the 12 Fed districts, comes Wednesday. Fed Chair Jerome Powell plans to take part in a moderated discussion on Tuesday.
 
 
+
+
+---
+
+
+**[Futures Loom After Iran Attack Vs. Israel; Bitcoin Falls](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-iran-attack-on-israel/)**
+
+
+
+
+---
+
+
 These Stock Market Areas Fare Best
 ----------------------------------
 
