--- a/_columns/The_Big_Picture/2024-04-12.md
+++ b/_columns/The_Big_Picture/2024-04-12.md
@@ -58,7 +58,7 @@ There also will be a bevy of economic data reports in the coming week. U.S. reta
 ---
 
 
-**[Futures Loom After Iran Attack Vs. Israel; Bitcoin Falls](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-iran-attack-on-israel/)**
+[**How Will Markets Respond To Iran Attack Vs. Israel?**](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-iran-attack-on-israel/)
 
 
 
