--- a/_columns/The_Big_Picture/2024-04-17.md
+++ b/_columns/The_Big_Picture/2024-04-17.md
@@ -153,14 +153,14 @@ Stay Long In The Long Run
 From Pitcairn's point of view, "we're still in the 'promise stage' of AI. It could be an extraordinary moment for humanity." The use of AI to quickly develop lifesaving or life-extending medicines is just one potential benefit. Nevertheless, he acknowledged that the stock market will continue to "roll among the emotions of investors."
 
 
-Since October of last year, the move by the S&P 500 "has been almost vertical. That just cannot hold," Pitcairn added.
+Since October, the move by the S&P 500 "has been almost vertical. That just cannot hold," Pitcairn added.
 
 
 
 Phil Pecsok, managing partner at Los Angeles-based Anacapa Advisors ($50 million under management) and a veteran former market maker of Nasdaq stocks at Crowell Weedon, warned against trying to actively manage a stock-centered portfolio with a neutral basis. The reason? Stock market returns in growth stocks generally favor a strategy of being invested in leading companies over the longer run.
 
 
-"You need to stay invested," Pecsok said. He noted the average return of long-short funds was a total 12% over the past five years. How about the "market neutral" class of actively managed funds? The same, a paltry 12%. In contrast, since the end of March 2018, despite three separate stock market corrections of 20% or more by the S&P 500, the large-cap benchmark has nearly doubled from 2640 to 5022, up 90% excluding dividends. Pecsok added that the Anacapa fund has gained 120% over the same time frame.
+"You need to stay invested," Pecsok said. He noted the average return of long-short funds was a total 12% over the past five years. How about the "market neutral" class of actively managed funds? It earned the same, a paltry 12%. In contrast, since the end of March 2018, despite three separate stock market corrections of 20% or more by the S&P 500, the large-cap benchmark has nearly doubled from 2640 to 5022, up 90% excluding dividends. Pecsok added that the Anacapa fund has gained 120% over the same time frame.
 
 
 In The IBD 50
@@ -170,7 +170,7 @@ In The IBD 50
 Meanwhile, [at least 10 members of the IBD 50](https://leaderboard.investors.com/#/ibd50/full) bucked the stock market weakness with gains of 1% or more.
 
 
-They included companies in areas such as gold and silver mining (**Agnico-Eagle Mines** ([AEM](https://research.investors.com/quote.aspx?symbol=AEM)) and **Wheaton Precious Metals** ([WPM](https://research.investors.com/quote.aspx?symbol=WPM)), rising 2.8% and moving above a 50.95 [buy point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/) in a [cup without handle](https://www.investors.com/how-to-invest/investors-corner/corner-cup-without-handle/)); banking and financial services (**Citigroup** ([C](https://research.investors.com/quote.aspx?symbol=C)), **Deutsche Bank** ([DB](https://research.investors.com/quote.aspx?symbol=DB)) and **Interactive Brokers** ([IBKR](https://research.investors.com/quote.aspx?symbol=IBKR))); natural gas (**Dorian LPG** ([LPG](https://research.investors.com/quote.aspx?symbol=LPG))); and shoes (Swiss athletic shoe and apparel firm **On** ([ONON](https://research.investors.com/quote.aspx?symbol=ONON))).
+They included companies in areas such as gold and silver mining (**Agnico-Eagle Mines** ([AEM](https://research.investors.com/quote.aspx?symbol=AEM)) and **Wheaton Precious Metals** ([WPM](https://research.investors.com/quote.aspx?symbol=WPM)), the latter rising 2.8% and moving above a 50.95 [buy point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/)); banking and financial services (**Citigroup** ([C](https://research.investors.com/quote.aspx?symbol=C)), **Deutsche Bank** ([DB](https://research.investors.com/quote.aspx?symbol=DB)) and **Interactive Brokers** ([IBKR](https://research.investors.com/quote.aspx?symbol=IBKR))); natural gas (**Dorian LPG** ([LPG](https://research.investors.com/quote.aspx?symbol=LPG))); and shoes (**On** ([ONON](https://research.investors.com/quote.aspx?symbol=ONON))).
 
 
 Could these areas of the market help keep the uptrend alive?
@@ -179,10 +179,7 @@ Could these areas of the market help keep the uptrend alive?
 Keep a close eye on NYSE-listed companies in the near term. Breadth was far better on that exchange on Wednesday vs. the Nasdaq.
 
 
-According to data from the General Market Indicators PDF page (see link at the bottom of this story), decliners edged gainers on the NYSE by a slim margin of 6-to-5.
-
-
-On the Nasdaq, losers topped winners by a 5-3 margin.
+According to data from the General Market Indicators page (see link at the bottom of this story), decliners edged gainers on the NYSE by a slim margin of 6-to-5. On the Nasdaq, losers topped winners by a 5-3 margin.
 
 
 
