--- a/_columns/The_Big_Picture/2024-04-19.md
+++ b/_columns/The_Big_Picture/2024-04-19.md
@@ -43,6 +43,19 @@ Meanwhile, the Dow Jones Industrial Average outperformed as it gained 0.6%. **Am
 Small caps held up too, with the Russell 2000 rising 0.2%. But the bears feasted on growth stocks, and the Innovator IBD 50 ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) exchange traded fund dropped 2.2%.
 
 
+
+
+---
+
+
+**[Futures Loom After AI Meltdown; Tesla Slashes Prices](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-nvidia-super-micro-plunge-tesla-prices-earnings/)**
+
+
+
+
+---
+
+
 Iran-Israel Tensions; PCE Inflation Data Looms
 ----------------------------------------------
 
