--- a/_columns/Stock_Of_the_Day/2024-04-19.md
+++ b/_columns/Stock_Of_the_Day/2024-04-19.md
@@ -83,7 +83,7 @@ Be sure to read IBD's [The Big Picture](https://www.investors.com/category/mark
 [How To Make Money In Stocks In 3 Simple Steps](https://www.investors.com/videos/how-to-make-money-in-stocks-in-3-simple-steps/)
 
 
-[Futures Loom After AI Meltdown; Tesla Slashes Prices](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-nvidia-super-micro-plunge-tesla-prices-earnings/)
+[Futures Rise As AI Stocks Bounce; Tesla Slashes Prices](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-nvidia-super-micro-plunge-tesla-prices-earnings/)
 
 
 
