--- a/_columns/The_Big_Picture/2024-04-19.md
+++ b/_columns/The_Big_Picture/2024-04-19.md
@@ -48,7 +48,7 @@ Small caps held up too, with the Russell 2000 rising 0.2%. But the bears feasted
 ---
 
 
-**[Futures Loom After AI Meltdown; Tesla Slashes Prices](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-nvidia-super-micro-plunge-tesla-prices-earnings/)**
+[**Futures Rise As AI Stocks Bounce; Tesla Slashes Prices**](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-nvidia-super-micro-plunge-tesla-prices-earnings/)
 
 
 
