--- a/_columns/Stock_Of_the_Day/2024-04-23.md
+++ b/_columns/Stock_Of_the_Day/2024-04-23.md
@@ -80,7 +80,7 @@ Be sure to read IBD's [The Big Picture](https://www.investors.com/category/mark
 [These Are The 5 Best Stocks To Buy And Watch Now](https://www.investors.com/research/best-stocks-to-buy-now/)
 
 
-[Market Runs Again; Tesla Jumps On Cheap EV](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-market-rallies-tesla-earnings-affordable-elon-musk/)
+[Futures: Tesla Runs On Cheap EV; Meta Earnings On Deck](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-tesla-surges-affordable-ev-meta-earnings-loom/)
 
 
 
