--- a/_columns/The_Big_Picture/2024-04-23.md
+++ b/_columns/The_Big_Picture/2024-04-23.md
@@ -132,7 +132,7 @@ Enterprise software firm **AppLovin** ([APP](https://research.investors.com/quot
 [IBD Digital: Unlock IBD's Premium Stock Lists, Tools And Analysis Today](https://www.investors.com/product/ibd-digital/?artProdLink=IBD_Digital)
 
 
-[Futures: Tesla Soars Late On 'Affordable' EV, Elon Musk](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-market-rallies-tesla-earnings-affordable-elon-musk/)
+[Futures: Tesla Runs On Cheap EV; Meta Earnings On Deck](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-tesla-surges-affordable-ev-meta-earnings-loom/)
 
 
 
