--- a/_columns/Stock_Of_the_Day/2024-05-16.md
+++ b/_columns/Stock_Of_the_Day/2024-05-16.md
@@ -95,7 +95,7 @@ Over the past year, Costco stock has gained 60.75%, more than double the returns
 [IBD Digital: Unlock IBD's Premium Stock Lists, Tools And Analysis Today](https://www.investors.com/product/ibd-digital/?artProdLink=IBD_Digital)
 
 
-[Rally Holds Tough; Walmart, Tesla Rival Enter Buy Zones](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-walmart-tesla-rival-nvidia-in-buy-area-applied-materials/)
+[Futures: Reddit, AMD Rally On Key AI Alliances](https://www.investors.com/market-trend/stock-market-today/dow-futures-sp-500-amd-rises-on-microsoft-report-reddit-soars-on-openai-deal/)
 
 
 
