--- a/_columns/Stock_Of_the_Day/2024-05-17.md
+++ b/_columns/Stock_Of_the_Day/2024-05-17.md
@@ -72,7 +72,7 @@ Be sure to read IBD's [The Big Picture](https://www.investors.com/category/mark
 [How To Make Money In Stocks In 3 Simple Steps](https://www.investors.com/videos/how-to-make-money-in-stocks-in-3-simple-steps/)
 
 
-[Dow Jones Closes Above 40,000; All Eyes On Nvidia Earnings](https://www.investors.com/market-trend/stock-market-today/dow-jones-40000-nvidia-earnings/)
+[Futures: Nvidia Offers Huge Test; 5 AI Stocks Near Buy Points](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-nvidia-earnings-ai-stocks-buy-points/)
 
 
 
