--- a/_columns/The_Big_Picture/2024-05-17.md
+++ b/_columns/The_Big_Picture/2024-05-17.md
@@ -46,6 +46,19 @@ It will be a big week for quarterly reports for one major reason — [Nvidia ear
 There is another important event in the coming week for AI investors. **Microsoft** ([MSFT](https://research.investors.com/quote.aspx?symbol=MSFT)) is expected to announce new initiatives in the space at its Build 2024 event on Monday. The Dow Jones software giant will be looking to maintain its momentum in the space following Google's recent I/O developer conference.
 
 
+
+
+---
+
+
+**[Futures: Nvidia Offers Huge Test; 5 AI Stocks Near Buy Points](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-nvidia-earnings-ai-stocks-buy-points/)**
+
+
+
+
+---
+
+
 These Stock Market Groups Fare Best
 -----------------------------------
 
