--- a/_columns/The_Big_Picture/2024-05-17.md
+++ b/_columns/The_Big_Picture/2024-05-17.md
@@ -43,7 +43,7 @@ Other economic reports due in the coming week includes existing-home sales on We
 It will be a big week for quarterly reports for one major reason — [Nvidia earnings are due Wednesday](https://www.investors.com/research/earnings-preview/nvidia-stock-near-highs-earnings-report/). If the AI chip leader can turn in a healthy earnings beat and serve up an encouraging forecast it will be beneficial for the market rally. Other noteworthy firms posting results in the coming week include **Modine Manufacturing** ([MOD](https://research.investors.com/quote.aspx?symbol=MOD)), **Intuit** ([INTU](https://research.investors.com/quote.aspx?symbol=INTU)) and **Snowflake** ([SNOW](https://research.investors.com/quote.aspx?symbol=SNOW)).
 
 
-There is another important event in the coming week for AI investors. **Microsoft** ([MSFT](https://research.investors.com/quote.aspx?symbol=MSFT)) is expected to announce new initiatives in the space at its Build 2024 event on Monday. The Dow Jones software giant will be looking to maintain its momentum in the space following Google's recent I/O developer conference.
+There is another important event in the coming week for AI investors. **Microsoft** ([MSFT](https://research.investors.com/quote.aspx?symbol=MSFT)) is expected to announce new initiatives in the space at its Build 2024 event, which kicks off on Tuesday. The Dow Jones software giant will be looking to maintain its momentum in the space following Google's recent I/O developer conference.
 
 
 
