--- a/_columns/The_Big_Picture/2024-05-20.md
+++ b/_columns/The_Big_Picture/2024-05-20.md
@@ -81,7 +81,7 @@ Is the stock market getting too complacent? A look at the [Cboe Market Volatilit
 But Nicholas Colas, co-founder of DataTrek Research and an expert on the VIX, says the so-called stock market fear gauge is not yet at statistically unusual levels.
 
 
-"The upshot here is that every U.S. equity bull market sees the VIX close below 12.0 hundreds of times: 243 days from 1992-1995, 247 days from 2004-2007, and 308 days from 2013-2019," he wrote in a report. "The first sub-12.0 reading is just the beginning; there is never just one. Moreover, every period noted in the chart is a classic "mid-cycle market," one where annual stock market returns are almost uniformly positive."
+"The upshot here is that every U.S. equity bull market sees the VIX close below 12.0 hundreds of times: 243 days from 1992-1995, 247 days from 2004-2007, and 308 days from 2013-2019," he wrote in a report. "The first sub-12.0 reading is just the beginning; there is never just one. Moreover, every period . . .is a classic "mid-cycle market," one where annual stock market returns are almost uniformly positive."
 
 
 [View General Market Indicator charts page here.](https://www.investors.com/wp-content/uploads/2024/05/DailyGMI_052024.pdf)
