--- a/_columns/Stock_Of_the_Day/2024-05-21.md
+++ b/_columns/Stock_Of_the_Day/2024-05-21.md
@@ -79,7 +79,7 @@ Eli Lilly stock has a strong [IBD Digital](https://www.investors.com/product/ibd
 [Learn How To Time The Market With IBD's ETF Market Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
 
 
-[Nasdaq Hits High But Here Comes Nvidia; Eli Lilly Breaks Out](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-nasdaq-hits-high-eli-lilly-breaks-out-but-here-comes-nvidia/)
+[Nasdaq Hits High, Eli Lilly Breaks Out, But Here Comes Nvidia](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-target-but-here-comes-nvidia/)
 
 
 
