--- a/_columns/The_Big_Picture/2024-05-21.md
+++ b/_columns/The_Big_Picture/2024-05-21.md
@@ -110,7 +110,7 @@ The company provides lower-cost and generic alternatives to popular brand-name d
 [IBD Digital: Unlock IBD's Premium Stock Lists, Tools And Analysis Today](https://www.investors.com/product/ibd-digital/?artProdLink=IBD_Digital)
 
 
-[Nasdaq Hits High But Here Comes Nvidia; Two Titans Flash Buy Signals](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-nasdaq-hits-high-eli-lilly-breaks-out-but-here-comes-nvidia/)
+[Nasdaq Hits High But Here Comes Nvidia](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-target-but-here-comes-nvidia/)
 
 
 
