--- a/_columns/The_Big_Picture/2024-06-12.md
+++ b/_columns/The_Big_Picture/2024-06-12.md
@@ -89,7 +89,7 @@ With indexes extending gains and more top stocks joining the uptrend, there's pl
 [Get Free IBD Newsletters: Market Prep \| Tech Report \| How To Invest](https://shop.investors.com/offer/splashresponsive.aspx?id=newsletters-howtoinvest)
 
 
-[Stocks Rally Despite Fed Shift; Tech Giant Soars Late](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-stocks-hit-highs-fed-rate-shift-broadcom-jumps-late/)
+[Futures: Elon Musk Expects To Win Huge Pay Vote; Broadcom Soars](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-fed-shift-elon-musk-tesla-pay-vote-broadcom-soars/)
 
 
 
