--- a/_columns/Stock_Of_the_Day/2024-06-17.md
+++ b/_columns/Stock_Of_the_Day/2024-06-17.md
@@ -53,10 +53,10 @@ Its current move is a bit of a hat trick. Shares rebounded from 10-week support.
 In addition, investors could plot a buy point at the May 10 high of 3,260. That would put shares in a buy range through 3,423.
 
 
-Chipotle is currently about 8% above its 50-day line, on a daily MarketSurge chart. It is 5.6% above its 10-week line on a weekly chart. This year, the stock has been extended as much as 12.9% above its 10-week, in January, and 10.7% in March.
+Chipotle is currently about 8% above its 50-day line, on a daily [MarketSurge chart](https://marketsurge.investors.com/?src=A012BF). It is 5.6% above its 10-week line on a weekly chart. This year, the stock has been extended as much as 12.9% above its 10-week, in January, and 10.7% in March.
 
 
-CMG stock rose 2.4%, to 3,350.80 on Monday. 
+CMG stock rose 2.9%, to 3,365.46 on Monday.
 
 
 **YOU MAY ALSO LIKE:**
