--- a/_columns/Stock_Of_the_Day/2024-07-03.md
+++ b/_columns/Stock_Of_the_Day/2024-07-03.md
@@ -17,7 +17,7 @@ author: PATRICK SEITZ
 
 
 
-on the [stock market today](https://www.investors.com/news/stock-market-today-stock-market-news/), ASML stock rose 2.2% to close at 1,071.41.
+On the [stock market today](https://www.investors.com/news/stock-market-today-stock-market-news/), ASML stock rose 2.2% to close at 1,071.41.
 
 
 On June 12, ASML stock broke out of a 13-week [consolidation pattern](https://www.investors.com/how-to-invest/investors-corner/shopify-stock-consolidation-pattern-led-to-beautiful-gains/) at a [buy point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/) of 1,056.34, according to [IBD MarketSurge](https://get.investors.com/marketsurge/?src=apa1bq) charts. It reached a record high of 1,077.22 that day before pulling back.
